[package]
name = "ckb-sdk"
version = "3.2.1"
authors = [ "Linfeng Qian <thewawar@gmail.com>", "Nervos Core Dev <dev@nervos.org>" ]
edition = "2018"
license = "MIT"
description = "Rust SDK for CKB"
homepage = "https://github.com/nervosnetwork/ckb-sdk-rust"
repository = "https://github.com/nervosnetwork/ckb-sdk-rust"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0.30"
anyhow = "1.0.63"
bech32 = "0.8.1"
derive-getters = "0.2.1"
log = "0.4.6"
reqwest = { version = "0.11", default-features = false, features = [ "json", "blocking" ] }
secp256k1 = { version = "0.24", features = ["recovery"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
tokio = { version = "1" }
bytes = "1"
futures = "0.3"
jsonrpc-core = "18"
parking_lot = "0.12"
lru = "0.7.1"
dashmap = "5.4"
dyn-clone = "1.0"

ckb-types = { package = "ckb-types", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }
ckb-dao-utils = { package = "ckb-dao-utils", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }
ckb-traits = { package = "ckb-traits", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }
ckb-jsonrpc-types = { package = "ckb-jsonrpc-types", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }
ckb-hash = { package = "ckb-hash", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }
ckb-resource = { package = "ckb-resource", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }
ckb-crypto = { package = "ckb-crypto", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain", features = ["secp"] }
ckb-script = { package = "ckb-script", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }
bitflags = "1.3.2"
sha3 = "0.10.1"
enum-repr-derive = "0.2.0"

# for feature test
rand = { version = "0.7.3", optional = true }
ckb-mock-tx-types = { package = "ckb-mock-tx-types", git = "https://github.com/ethanyuan/ckb-standalone-debugger", branch = "v0.116.1-branch-chain" }
ckb-chain-spec = { package = "ckb-chain-spec", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }

sparse-merkle-tree = "0.6.1"
lazy_static = "1.3.0"

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
rustls-tls = ["reqwest/rustls-tls"]
test = []

[dev-dependencies]
clap = { version = "=4.4.18", features = [ "derive" ] } # TODO clap v4.5 requires rustc v1.74.0+
httpmock = "0.6"
async-global-executor = "2.3.1"
hex = "0.4"
